logs/dag_id=project_6_20/run_id=manual__2024-02-01T16:15:23.940128+00:00/task_id=dim_table_creation/attempt=3.log
[2024-02-01 16:19:41,264] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: project_6_20.dim_table_creation manual__2024-02-01T16:15:23.940128+00:00 [queued]>
[2024-02-01 16:19:41,282] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: project_6_20.dim_table_creation manual__2024-02-01T16:15:23.940128+00:00 [queued]>
[2024-02-01 16:19:41,282] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2024-02-01 16:19:41,282] {taskinstance.py:1357} INFO - Starting attempt 3 of 4
[2024-02-01 16:19:41,283] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2024-02-01 16:19:41,310] {taskinstance.py:1377} INFO - Executing <Task(PythonOperator): dim_table_creation> on 2024-02-01 16:15:23.940128+00:00
[2024-02-01 16:19:41,316] {standard_task_runner.py:52} INFO - Started process 6978 to run task
[2024-02-01 16:19:41,320] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'project_6_20', 'dim_table_creation', 'manual__2024-02-01T16:15:23.940128+00:00', '--job-id', '293', '--raw', '--subdir', 'DAGS_FOLDER/main.py', '--cfg-path', '/tmp/tmpppgiute0', '--error-file', '/tmp/tmp71s1a92t']
[2024-02-01 16:19:41,321] {standard_task_runner.py:80} INFO - Job 293: Subtask dim_table_creation
[2024-02-01 16:19:41,506] {task_command.py:369} INFO - Running <TaskInstance: project_6_20.dim_table_creation manual__2024-02-01T16:15:23.940128+00:00 [running]> on host 1fafaef2f352
[2024-02-01 16:19:41,741] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=project_6_20
AIRFLOW_CTX_TASK_ID=dim_table_creation
AIRFLOW_CTX_EXECUTION_DATE=2024-02-01T16:15:23.940128+00:00
AIRFLOW_CTX_TRY_NUMBER=3
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-02-01T16:15:23.940128+00:00
[2024-02-01 16:19:41,796] {logging_mixin.py:115} INFO -    province_id   nama_prov
0            1  Jawa Barat
[2024-02-01 16:19:41,801] {logging_mixin.py:115} INFO -    district_id  province_id           nama_kab
0            1            1  Kabupaten Bandung
[2024-02-01 16:19:41,808] {logging_mixin.py:115} INFO -    case_id   status_name status_detail
0        1  closecontact   dikarantina
1        2  closecontact     discarded
2        3  closecontact     meninggal
3        4      probable     diisolasi
4        5      probable     discarded
[2024-02-01 16:19:41,836] {logging_mixin.py:115} INFO - Connect PostgreSQL using psycopg2
[2024-02-01 16:19:41,844] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 2056, in execute
    cur.execute(*args, **kwargs)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 1: ...ELECT name FROM sqlite_master WHERE type='table' AND name=?;
                                                                      ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 171, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 189, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/main.py", line 130, in dim_table_creation
    df_province.to_sql(name='province_table', con=conn_postgres, if_exists='append', index=False)
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/core/generic.py", line 2882, in to_sql
    method=method,
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 728, in to_sql
    **engine_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 2225, in to_sql
    table.create()
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 856, in create
    if self.exists():
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 840, in exists
    return self.pd_sql.has_table(self.name, self.schema)
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 2236, in has_table
    return len(self.execute(query, [name]).fetchall()) > 0
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 2068, in execute
    raise ex from exc
pandas.io.sql.DatabaseError: Execution failed on sql 'SELECT name FROM sqlite_master WHERE type='table' AND name=?;': syntax error at or near ";"
LINE 1: ...ELECT name FROM sqlite_master WHERE type='table' AND name=?;
                                                                      ^

[2024-02-01 16:19:41,901] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=project_6_20, task_id=dim_table_creation, execution_date=20240201T161523, start_date=20240201T161941, end_date=20240201T161941
[2024-02-01 16:19:41,927] {standard_task_runner.py:97} ERROR - Failed to execute job 293 for task dim_table_creation (Execution failed on sql 'SELECT name FROM sqlite_master WHERE type='table' AND name=?;': syntax error at or near ";"
LINE 1: ...ELECT name FROM sqlite_master WHERE type='table' AND name=?;
                                                                      ^
; 6978)
[2024-02-01 16:19:41,941] {local_task_job.py:156} INFO - Task exited with return code 1
[2024-02-01 16:19:42,084] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
